--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,7 +16,7 @@ jobs:
     steps:      
     - uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: '4.8.x'
+        dotnet-version: '4.8.1'
     - run: dotnet publish "src/SmoothieInstaller.csproj"
 
     - uses: actions/upload-artifact@v4
