--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,11 +13,11 @@ jobs:
       matrix:
         os: [windows-2022]
     
-    steps:      
-    - uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: '4.8.1'
-    - run: dotnet publish "src/SmoothieInstaller.csproj"
+    # steps:      
+    # - uses: actions/setup-dotnet@v4
+    #   with:
+    #     dotnet-version: '4.8.1'
+    # - run: dotnet publish "src/SmoothieInstaller.csproj"
 
     - uses: actions/upload-artifact@v4
       with:
