--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         os: [windows-2022]
     
-    # steps:      
+    steps:      
     # - uses: actions/setup-dotnet@v4
     #   with:
     #     dotnet-version: '4.8.1'
