--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,7 +17,7 @@ jobs:
     # - uses: actions/setup-dotnet@v4
     #   with:
     #     dotnet-version: '4.8.1'
-    # - run: dotnet publish "src/SmoothieInstaller.csproj"
+    - run: dotnet publish "src/SmoothieInstaller.csproj"
 
     - uses: actions/upload-artifact@v4
       with:
