--- a/src/SmoothieInstaller.csproj
+++ b/src/SmoothieInstaller.csproj
@@ -19,6 +19,7 @@
     <IncludeSourceRevisionInInformationalVersion>false</IncludeSourceRevisionInInformationalVersion>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyInformationalVersionAttribute>false</GenerateAssemblyInformationalVersionAttribute>
+    <ApplicationIcon>../smoothie.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
