--- a/src/SmoothieInstaller.csproj
+++ b/src/SmoothieInstaller.csproj
@@ -11,15 +11,16 @@
     <PublishRelease>true</PublishRelease>
     <PlatformTarget>x64</PlatformTarget>
 
-    <ApplicationManifest>.manifest</ApplicationManifest>
-    <AssemblyVersion>1.0.0</AssemblyVersion>
+    <ApplicationManifest>Resources/.manifest</ApplicationManifest>
+    <ApplicationIcon>Resources/.ico</ApplicationIcon>
+
+    <AssemblyVersion>1.0.2.0</AssemblyVersion>
     <AssemblyTitle>Smoothie Installer</AssemblyTitle>
     <Product>Smoothie Installer</Product>
-    <Copyright>Copyright (C) 2025</Copyright>
+    <Copyright>Copyright (C) 2024 - 25</Copyright>
     <IncludeSourceRevisionInInformationalVersion>false</IncludeSourceRevisionInInformationalVersion>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyInformationalVersionAttribute>false</GenerateAssemblyInformationalVersionAttribute>
-    <ApplicationIcon>../smoothie.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
